--- a/style.scss
+++ b/style.scss
@@ -76,7 +76,7 @@ $maxWidthContainer: 950px;
     background-color: #F536C8;
 }
 
-html,body {height:100%; box-sizing: border-box;hyphens: auto;hyphenate-limit-chars: 6 3 2;margin: 0px;}
+html,body { box-sizing: border-box;hyphens: auto;hyphenate-limit-chars: 6 3 2;margin: 0px;}
 div, td, h2, p {
     -webkit-hyphens: auto;
     -webkit-hyphenate-limit-before: 3;
@@ -138,10 +138,10 @@ div, td, h2, p {
         margin: 0;
         display: inline-block;
         background-color: #C6E5FB;
-        padding: 20px 15% 15px 27px;
+        padding: 20px 9% 10px 27px;
         text-transform: uppercase;
         margin-left: 2px;
-        font-size: 24px;
+        font-size: 22px;
         
     }
 
@@ -449,6 +449,7 @@ div, td, h2, p {
                 margin-bottom: 10px;
                 display: flex;
                 align-items: center;
+                
                 p {
                     font-weight: bold;
                 }
@@ -1246,6 +1247,16 @@ div, td, h2, p {
             width: 90%;
         }
     }
+
+    .colortable {
+        .colors {
+            .colorcol {
+                .colorpro{
+                    margin-bottom: 0px;
+                }
+            }
+        }
+    }
 }
 
 @media (min-width:766px) and (max-width:951px) {
@@ -1253,11 +1264,13 @@ div, td, h2, p {
         font-size: 12px;
     }
 
-    h2 {
+    .titleprof  h2 {
         padding: 0;
         display: flex;
         align-items: center;
         font-size: 20px;
         width: 90%;
     }
+
+    
 }
