--- a/style.css
+++ b/style.css
@@ -114,10 +114,11 @@ div, td, h2, p {
   margin: 0;
   display: inline-block;
   background-color: #c6e5fb;
-  padding: 20px 9% 10px 27px;
+  padding: 10px 9% 10px 27px;
   text-transform: uppercase;
   margin-left: 2px;
   font-size: 22px;
+  width:90%;
 }
 .title div, .titleprof div {
   width: 0;
@@ -814,7 +815,7 @@ div, td, h2, p {
 @media (max-width: 765px) {
   .maintable {
     grid-template-columns: repeat(2, 49.9%);
-    grid-template-rows: 33px repeat(9, 72px) 33px repeat(11, 72px) 33px repeat(10, 72px) 33px repeat(7, 72px);
+    grid-template-rows: 33px repeat(9, 60px) 33px repeat(11, 60px) 33px repeat(10, 60px) 33px repeat(7, 60px);
     grid-template-areas: "M1 M2" "PH PH" "HI PI" "BZ FI" "EN EN" "MT MT" "PA PA" "IN EG" "PR PR" "LT PP" "M3 M4" "PH2 PH2" "CO BU" "FI2 MA" "H3 H3" "TH AL" "LO DI" "E1 SP" "PY OP" "WE CS" "DA CM" "PP2 PP2" "M5 M6" "PH3 PH3" "SO SO" "MI E2" "H1 H1" "MY MY" "H2 H2" "AN MO" "SY PG" "VI E3" "PP3 PP3" "M7 M8" "SO2 VK" "H4 VK" "MY2 VK" "H5 VK" "PJ VK" "IO VK" "PP4 VK";
  }
   .fizra2, .physics2, .hardyak3, .projprac2, .fizra3, .softyar2, .projprac3, .hardyak4, .matyan2, .hardyak5, .projprac4 {
@@ -1007,7 +1008,7 @@ div, td, h2, p {
   grid-area: TTT;
   display: grid;
   grid-template-columns: repeat(2, 49.9%);
-  grid-template-rows: 33px repeat(5, 70px);
+  grid-template-rows: 33px repeat(5, 60px);
   column-gap: 1px;
   row-gap: 11px;
   grid-template-areas: "D3 D4" "jv jv2" "js js2" "ph ph2" "E9 py2" "E9 sh";
@@ -1187,7 +1188,7 @@ div, td, h2, p {
 @media (max-width: 765px) {
   .hardtable {
     grid-template-columns: repeat(3, 33.3%);
-    grid-template-rows: 33px repeat(5, 70px) 33px repeat(27, 70px);
+    grid-template-rows: 33px repeat(5, 60px) 33px repeat(27, 60px);
     grid-template-areas: "TTT TTT TTT" "TTT TTT TTT" "TTT TTT TTT" "TTT TTT TTT" "TTT TTT TTT" "TTT TTT TTT" "D5 D6 D7" "po pa is" "po an io" "po we se" "ma bd cv" "ga d3 re" "te un tt" "sy c1 sy2" "sy ac ig" "ld sp cp" "ld mc rt" "db fd pd" "ss so ah" "gh fi ri" "pr pg ks" "sl mg ux" "mt ts sc" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce" "ce ce ce";
  }
   .hardtable .colortable {
@@ -1377,14 +1378,14 @@ div, td, h2, p {
 @media (max-width: 765px) {
   .profskills {
     grid-template-columns: repeat(3, 33.3%);
-    grid-template-rows: repeat(7, 25px);
+    grid-template-rows: repeat(7, 37px);
     grid-template-areas: "l l l" "m q z" "m q z" "bb s w" "n t x" "o u y" "p v aa";
  }
   .empty11, .empty12 {
     display: none;
  }
 }
-@media (max-width: 765px) {
+@media (min-width:401px) and (max-width: 765px) {
   .wrapper {
     font-size: 11px;
  }
@@ -1408,6 +1409,32 @@ div, td, h2, p {
     margin-bottom: 0px;
  }
 }
+
+@media (max-width:400px) {
+  .wrapper {
+    font-size: 11px;
+ }
+  div, p {
+    font-size: 9px;
+ }
+  .titleprof {
+    font-size: 12px;
+    text-align: center;
+    padding: 0px;
+    width: 100%;
+ }
+  .titleprof h2 {
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    width: 90%;
+ }
+  .colortable .colors .colorcol .colorpro {
+    margin-bottom: 10px;
+ }
+}
+
 @media (min-width: 766px) and (max-width: 951px) {
   div {
     font-size: 12px;
